XMLExper/m12/m12_452_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLUnknown::ShallowEqual(const tinyxml2::XMLNode*) const’:
tinyxml2.cpp:1433:61: error: cannot dynamic_cast ‘unknown’ (of type ‘const class tinyxml2::XMLUnknown*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1433 |     return ( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(unknown) && XMLUtil::StringEqual( unknown->Value(), Value() ));
      |                                                             ^
diff: tinyxml2.S: No such file or directory
